--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <h1 id="title">Survey Form Project</h1>
     <p id="description">This is my first project in HTML/CSS, I will be making a form to showcase what I learned.</p>
     <form id="survey-form">
+      <label id="name-label">Enter your name: <input id="name" type="text" required/></label>
+      <label id="email-label">Enter your email: <input id="email" type="email" required></label>
+      <label id="number-label">Enter your age:<input id="number" type="number" min="0" max="120"></label>
     </form>
   </body>
 </html>
