added select dropdown menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       <label id="name-label">Enter your name: <input id="name" type="text" required/></label>
       <label id="email-label">Enter your email: <input id="email" type="email" required></label>
       <label id="number-label">Enter your age:<input id="number" type="number" min="0" max="120"></label>
+      <select id="dropdown">
+        <option value="">(select one)</option>
+        <option value="1">Gaming</option>
+        <option value="2">Coding</option>
+        <option value="3">Sports</option>
+        <option value="4">Making videos</option>
+        <option value="5">Other</option>
+      </select>
     </form>
   </body>
 </html>
