added radio buttons

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <h1 id="title">Survey Form Project</h1>
     <p id="description">This is my first project in HTML/CSS, I will be making a form to showcase what I learned.</p>
     <form id="survey-form">
-      <label id="name-label">Enter your name: <input id="name" type="text" required/></label>
-      <label id="email-label">Enter your email: <input id="email" type="email" required></label>
-      <label id="number-label">Enter your age:<input id="number" type="number" min="0" max="120"></label>
+      <label id="name-label" for="name">Name: <input id="name" type="text" placeholder="Enter your name here" required/></label>
+      <label id="email-label" for="email">email: <input id="email" type="email" placeholder="Enter your email here" required></label>
+      <label id="number-label" for="number">Age:<input id="number" type="number" min="0" max="120" placeholder="Enter your age here"></label>
       <select id="dropdown">
         <option value="">(select one)</option>
         <option value="1">Gaming</option>
@@ -20,6 +20,10 @@
         <option value="4">Making videos</option>
         <option value="5">Other</option>
       </select>
+      <input type="radio" name="user-role" value="student"/>
+      <input type="radio" name="user-role" value="recruiter"/>
+      <input type="radio" name="user-role" value="software-engineer"/>
+      <input type="radio" name="user-role" value="other"/>
     </form>
   </body>
 </html>
