added labels to radio buttons

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <option value="4">Making videos</option>
         <option value="5">Other</option>
       </select>
-      <input type="radio" name="user-role" value="student"/>
-      <input type="radio" name="user-role" value="recruiter"/>
-      <input type="radio" name="user-role" value="software-engineer"/>
-      <input type="radio" name="user-role" value="other"/>
+      <label><input type="radio" name="user-role" value="student"/></label>
+      <label><input type="radio" name="user-role" value="recruiter"/></label>
+      <label><input type="radio" name="user-role" value="software-engineer"/></label>
+      <label><input type="radio" name="user-role" value="other"/></label>
     </form>
   </body>
 </html>
