added text to radio buttons showing what they are

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       </select>
       </div>
       <div class="form-segment">
-       <input type="radio" name="user-role" value="student"/>
-      <input type="radio" name="user-role" value="recruiter"/>
-      <input type="radio" name="user-role" value="software-engineer"/>
-      <input type="radio" name="user-role" value="other"/> 
+      <label><input type="radio" name="user-role" value="student"/> Student</label>
+      <label><input type="radio" name="user-role" value="recruiter"/> Recruiter</label>
+      <label><input type="radio" name="user-role" value="software-engineer"/> Software Engineer</label>
+      <label><input type="radio" name="user-role" value="other"/>Other</label>
       </div>
     </form>
   </body>
