--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       <label><input type="radio" name="user-role" value="software-engineer"/> Software Engineer</label>
       <label><input type="radio" name="user-role" value="other"/>Other</label>
       </div>
+      <div class="form-segment">
+        <p>What cuisines do you like to eat?</p>
+        <label><input type="checkbox" value="chinese"> Chinese</label>
+        <label><input type="checkbox" value="french"> French</label>
+        <label><input type="checkbox" value="italian"> Italian</label>
+      </div>
     </form>
   </body>
 </html>
