mostly complete html

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
         <label><input type="checkbox" value="french"> French</label>
         <label><input type="checkbox" value="italian"> Italian</label>
       </div>
+      <div class="form-segment">
+        <p>Anything else you would like to add?</p>
+        <textarea></textarea>
+      </div>
+      <div class="form-segment">
+        <input type="submit" id="submit"/>
+      </div>
     </form>
   </body>
 </html>
