added text to select dropdown menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
        <label id="number-label" for="number">Age:<input id="number" type="number" min="0" max="120" placeholder="Enter your age here"></label> 
       </div>
       <div class="form-segment">
+        <p>What is your favorite hobby?</p>
          <select id="dropdown">
         <option value="">(select one)</option>
         <option value="gaming">Gaming</option>
